--- a/daemon/process/dobby.service
+++ b/daemon/process/dobby.service
@@ -35,6 +35,7 @@
 Description=RDK Dobby (Container) daemon
 Requires=dbus.socket
 Before=wpeframework.service
+PartOf=wpeframework.service
 After=dbus.socket
 
 [Service]
